[tool.poetry]
name = "ormexampleflask"
version = "0.1.0"
description = ""
authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.1"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.3"
Flask-Migrate = "^3.1.0"
click = "^8.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
