[tool.poetry]
name = "ormexampleflask"
version = "2024.1"
description = ""
authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0"
Flask-SQLAlchemy = "^3.0"
psycopg = {version = "^3.1", extras = ["c"]}
Flask-Migrate = "^4.0"
click = "^8.1"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
